# svg2x

./: .gitignore  CMakeLists.txt  Makefile  bootstrap.sh  doxy.config.in
cmake/Modules/: FindGDK.cmake  FindGSL.cmake  FindGTK.cmake  FindLibRSVG.cmake  FindLibSigX2.cmake
docs/pages/: mainpage.h
src/: CMakeLists.txt  svg2eps.c  svg2pdf.c
